# aphrodite-auth-service

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/dev/: Dockerfile
docker/prod/: Dockerfile
migrations/: V0002__create_table_oauth_session.sql  V0003__create_table_oauth_token.sql  V0004__create_table_oauth_consent.sql  V0005__alter_table_oauth_client_add_mandatory_scopes.sql  V0006__alter_table_oauth_client_add_logos_column.sql  V9999__insert_default_oauth_client.sql
src/: main.rs
src/adapters/api/auth/: router.rs
src/adapters/api/auth/controllers/: authorize.rs  consent_confirm.rs  consent_info.rs  mod.rs  par.rs  (+2 more)
src/adapters/api/health/: router.rs
src/adapters/spi/: mod.rs
src/adapters/spi/cache/: cache.rs  redis.rs
src/adapters/spi/db/: postgres_db.rs
src/adapters/spi/gateways/: idp.rs  mod.rs
src/adapters/spi/repositories/: mod.rs  oauth_client.rs  oauth_consent.rs  oauth_session.rs  oauth_token.rs
src/application/: mod.rs
src/application/api/: controller.rs  mod.rs  use_case.rs
src/application/spi/: cache.rs  db.rs  mod.rs  repository.rs
src/application/use_cases/auth/: authorize.rs  authorize_continue.rs  consent_confirm.rs  consent_info.rs  mod.rs  par.rs  token_authorization_code.rs  token_refresh.rs  userinfo.rs
src/domain/: idp.rs  idp_id_token.rs  mod.rs  oauth_client.rs  oauth_consent.rs  oauth_session.rs  oauth_token.rs
src/dto/auth/: mod.rs
src/dto/auth/authorize/: mod.rs  request.rs  token_data.rs
src/dto/auth/consent_confirm/: request.rs  response.rs
src/dto/auth/consent_info/: request.rs  response.rs
src/dto/auth/par/: request.rs  response.rs
src/dto/auth/token/: access_token.rs  mod.rs  request.rs  response.rs
src/dto/auth/userinfo/: request.rs  response.rs
src/infra/: app.rs  dependencies.rs  mod.rs
src/utils/: api_error.rs  api_response.rs  entropy.rs  hasher.rs  mod.rs  token.rs
