[package]
name = "afrodite-auth-service"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.8"
tokio = "1.48.0"
serde = { version = "1.0.228", features = ['derive']}
serde_json = "1.0.145"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
deadpool-redis = { version = "0.14", features = ["serde"] }
