[package]
name = "afrodite-auth-service"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ['derive']}
serde_json = "1.0.145"
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
deadpool-redis = { version = "0.22.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "postgres",
    "uuid",
    "chrono",
] }
env_logger = "0.11.8"
async-trait = "0.1.89"
