[package]
name = "aphrodite-auth-service"
version = "1.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ['derive']}
serde_json = "1.0.145"
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
deadpool-redis = { version = "0.22.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "postgres",
    "uuid",
    "chrono",
] }
env_logger = "0.11.8"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
sha2 = "0.10.9"
hex = "0.4"
rand = "0.9.2"
base64 = "0.22.1"
